# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  syntax.md
alembic/: env.py
alembic/versions/: 2025_11_02_2018_initial_migration.py
docker/: README.md
docker/development/: .env.development  docker-compose.yml  init-db.sh
docker/test/: .env.test  docker-compose.yml  init-test-db.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CLEAN_ARCHITECTURE.md  LEARNING_GUIDE.md  QUICK_START_CLEAN.md
scripts/: README.md  seed.py
src/: main.py
src/core/: __init__.py  config.py  database.py
src/core/application/use_cases/: __init__.py  base_use_case.py
src/core/domain/entities/: __init__.py  base_entity.py
src/core/domain/repositories/: __init__.py  base_repository.py
src/core/infrastructure/: container.py  logger.py
src/core/infrastructure/services/: __init__.py  email_service.py  logger_service.py  notification_service.py  sms_service.py
src/modules/posts/: dependencies.py  post_providers.py
src/modules/posts/application/dto/: __init__.py  create_post_dto.py  post_response_dto.py
src/modules/posts/application/use_cases/: __init__.py  create_post_use_case.py
src/modules/posts/domain/entities/: __init__.py  post_entity.py
src/modules/posts/presentation/: __init__.py  post_controller.py
src/modules/users/: dependencies.py  user_module.py  user_providers.py
src/modules/users/presentation/: __init__.py  user_controller.py
tests/: conftest.py  test_users.py
(+23 files in other folders)
